# sciod

./: .gitignore  LICENSE  README.md  meson.build
ide/nbproject/: configurations.xml  project.xml
include/: FloatVec.hpp  Layer.hpp  NeuralNet.hpp  Node.hpp  meson.build
include/sciod/: FloatVec.hpp  Layer.hpp  MetaNet.hpp  NeuralNet.hpp  Node.hpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
source/: FloatVec.cpp  FloatVec.hpp  NeuralNet.cpp  NeuralNet.hpp  Node.cpp  Node.hpp  Row.cpp  Row.hpp
src/: FloatVec.cpp  Layer.cpp  MetaNet.cpp  NeuralNet.cpp  Node.cpp  meson.build
test/: meson.build  simpleTests.cpp
tests/: catch.cpp  intentTests.cpp  simpleTests.cpp
